force-app/main/default/objects/API_Details__c/API_Details__c.object-meta.xml
<CustomObject>
    <label>API Details</label>
    <nameField>
        <displayFormat>API-{000000}</displayFormat>
        <label>API Details Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>API Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>