force-app/main/default/objects/API_Details__c/fields/ApexClass__c.field-meta.xml
<CustomField>
    <fullName>ApexClass__c</fullName>
    <label>ApexClass</label>
    <length>255</length>
    <type>Text</type>
</CustomField>