force-app/main/default/objects/API_Details__c/fields/API_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Name__c</fullName>
    <label>API Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>API-1</fullName>
            </value>
            <value>
                <fullName>ServiceNow</fullName>
            </value>
            <value>
                <fullName>API4</fullName>
            </value>
            <value>
                <fullName>API3</fullName>
            </value>
            <value>
                <fullName>API2</fullName>
            </value>
            <value>
                <fullName>API5</fullName>
            </value>
            <value>
                <fullName>API6</fullName>
            </value>
            <value>
                <fullName>API7</fullName>
            </value>
            <value>
                <fullName>API10</fullName>
            </value>
            <value>
                <fullName>API11</fullName>
            </value>
            <value>
                <fullName>API12</fullName>
            </value>
            <value>
                <fullName>API13</fullName>
            </value>
            <value>
                <fullName>API15</fullName>
            </value>
            <value>
                <fullName>API16</fullName>
            </value>
            <value>
                <fullName>API20</fullName>
            </value>
            <value>
                <fullName>API23</fullName>
            </value>
            <value>
                <fullName>API8</fullName>
            </value>
            <value>
                <fullName>API17</fullName>
            </value>
            <value>
                <fullName>API24</fullName>
            </value>
            <value>
                <fullName>API21</fullName>
            </value>
            <value>
                <fullName>iMngCreateWorkSpace</fullName>
            </value>
            <value>
                <fullName>API1</fullName>
            </value>
            <value>
                <fullName>API9</fullName>
            </value>
            <value>
                <fullName>iMngRenamed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>