force-app/main/default/objects/API_Details__c/fields/APIResponse__c.field-meta.xml
<CustomField>
    <fullName>APIResponse__c</fullName>
    <label>APIResponse</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>