force-app/main/default/objects/API_Details__c/fields/createdFolderId__c.field-meta.xml
<CustomField>
    <fullName>createdFolderId__c</fullName>
    <label>createdFolderId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>