force-app/main/default/objects/API_Details__c/fields/FileContents__c.field-meta.xml
<CustomField>
    <fullName>FileContents__c</fullName>
    <label>FileContents</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>