force-app/main/default/objects/API_Details__c/fields/iManage_Documents__c.field-meta.xml
<CustomField>
    <fullName>iManage_Documents__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>iManage Documents</label>
    <referenceTo>iManage_Documents__c</referenceTo>
    <relationshipLabel>API Details</relationshipLabel>
    <relationshipName>API_Details</relationshipName>
    <type>Lookup</type>
</CustomField>