force-app/main/default/objects/API_Details__c/fields/iManageFoldersId__c.field-meta.xml
<CustomField>
    <fullName>iManageFoldersId__c</fullName>
    <label>iManageFoldersId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>