force-app/main/default/objects/API_Details__c/fields/IP_Matter_Number__c.field-meta.xml
<CustomField>
    <fullName>IP_Matter_Number__c</fullName>
    <label>IP Matter Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>