force-app/main/default/objects/API_Details__c/fields/IP_Matter_Number_URL__c.field-meta.xml
<CustomField>
    <fullName>IP_Matter_Number_URL__c</fullName>
    <formula>HYPERLINK(
  &quot;/&quot; +  recordId__c ,
   IP_Matter_Number__c ,
  &quot;_blank&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IP Matter Number</label>
    <type>Text</type>
</CustomField>