force-app/main/default/objects/API_Details__c/fields/JsonDetails__c.field-meta.xml
<CustomField>
    <fullName>JsonDetails__c</fullName>
    <label>JsonDetails</label>
    <length>70000</length>
    <type>LongTextArea</type>
</CustomField>