force-app/main/default/objects/API_Details__c/fields/recordId__c.field-meta.xml
<CustomField>
    <fullName>recordId__c</fullName>
    <label>recordId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>