force-app/main/default/objects/API_Details__c/listViews/API8.listView-meta.xml
<ListView>
    <fullName>API8</fullName>
    <columns>NAME</columns>
    <columns>iManage_Documents__c</columns>
    <columns>recordId__c</columns>
    <columns>Status__c</columns>
    <columns>API_Name__c</columns>
    <columns>ApexClass__c</columns>
    <columns>IP_Matter_Number_URL__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>API_Name__c</field>
        <operation>equals</operation>
        <value>API8</value>
    </filters>
    <label>API8</label>
</ListView>