force-app/main/default/objects/API_Details__c/listViews/Error_Details.listView-meta.xml
<ListView>
    <fullName>Error_Details</fullName>
    <columns>NAME</columns>
    <columns>iManage_Documents__c</columns>
    <columns>recordId__c</columns>
    <columns>Status__c</columns>
    <columns>API_Name__c</columns>
    <columns>ApexClass__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Success</value>
    </filters>
    <label>Error Details</label>
</ListView>